<?xml version="1.0" encoding="utf-8"?>
<!--
    Ryan Shee (rshee)
    Homework 2
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dealfaro.luca.backandforthstudio.MainActivity">

    <!-- HEADER -->
    <TextView
        android:id="@+id/page1header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/first_activity_hello" />

    <!-- "STRING 1: " -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="String 1: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView3"
        android:layout_alignBaseline="@+id/page1editText"
        android:layout_alignBottom="@+id/page1editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- "STRING 2: " -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="String 2: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/page1textView2"
        android:layout_alignBottom="@+id/page1textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- "STRING 3: " -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="String 3: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/page1textView3"
        android:layout_alignBottom="@+id/page1textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- EDIT 1 -->
    <EditText
        android:id="@+id/page1editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:ems="6"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        android:layout_below="@+id/page1header"
        android:layout_toLeftOf="@+id/page1button1"
        android:layout_toStartOf="@+id/page1button1">
        <requestFocus />
    </EditText>

    <!-- BUTTON 1 -->
    <Button
        android:id="@+id/page1button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="save1"
        android:text="@string/save"
        android:layout_alignBaseline="@+id/page1editText"
        android:layout_alignBottom="@+id/page1editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!-- TEXT 2 -->
    <TextView
        android:id="@+id/page1textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/page1button1"
        android:layout_alignLeft="@+id/page1editText"
        android:layout_alignStart="@+id/page1editText" />

    <!-- BUTTON 2 -->
    <Button
        android:id="@+id/page1button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToActivity2"
        android:text="@string/gostring"
        android:layout_alignBaseline="@+id/page1textView2"
        android:layout_alignBottom="@+id/page1textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!-- TEXT 3 -->
    <TextView
        android:id="@+id/page1textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/page1button2"
        android:layout_alignLeft="@+id/page1textView2"
        android:layout_alignStart="@+id/page1textView2" />

    <!-- BUTTON 3 -->
    <Button
        android:id="@+id/page1button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToActivity3"
        android:text="@string/gostring"
        android:layout_alignBaseline="@+id/page1textView3"
        android:layout_alignBottom="@+id/page1textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
