<?xml version="1.0" encoding="utf-8"?>
<!--
    Ryan Shee (rshee)
    Homework 2
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dealfaro.luca.backandforthstudio.SecondActivity">

    <!-- HEADER -->
    <TextView
        android:id="@+id/page2header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/second_activity_hello" />

    <!-- "STRING 1: " -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="String 1: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/page2textView1"
        android:layout_alignBottom="@+id/page2textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView6" />

    <!-- "STRING 2: " -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="String 2: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/page2editText"
        android:layout_alignBottom="@+id/page2editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView4" />

    <!-- "STRING 3: " -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="String 3: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/page2textView3"
        android:layout_alignBottom="@+id/page2textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView" />

    <!-- TEXT 1 -->
    <TextView
        android:id="@+id/page2textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/page2header"
        android:layout_alignLeft="@+id/page2textView3"
        android:layout_alignStart="@+id/page2textView3" />

    <!-- BUTTON 1 -->
    <Button
        android:id="@+id/page2button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToActivity1"
        android:text="@string/gostring"
        android:layout_alignBaseline="@+id/page2textView1"
        android:layout_alignBottom="@+id/page2textView1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!-- EDIT 2 -->
    <EditText
        android:id="@+id/page2editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/page2button1"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp">
        <requestFocus />
    </EditText>

    <!-- BUTTON 2 -->
    <Button
        android:id="@+id/page2button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="save2"
        android:layout_alignBaseline="@+id/page2editText"
        android:layout_alignBottom="@+id/page2editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!-- TEXT 3 -->
    <TextView
        android:id="@+id/page2textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/page2button3"
        android:layout_alignBottom="@+id/page2button3"
        android:layout_alignLeft="@+id/page2editText"
        android:layout_alignStart="@+id/page2editText"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <!-- BUTTON 3 -->
    <Button
        android:id="@+id/page2button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToActivity3"
        android:text="@string/gostring"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/page2button2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
