<?xml version="1.0" encoding="utf-8"?>
<!--
    Ryan Shee (rshee)
    Homework 2
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dealfaro.luca.backandforthstudio.ThirdActivity">

    <!-- HEADER -->
    <TextView
        android:id="@+id/page3header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/third_activity_hello" />

    <!-- "STRING 1: " -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="String 1: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/page3textView1"
        android:layout_alignBottom="@+id/page3textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView5" />

    <!-- "STRING 2: " -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="String 2: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/page3textView2"
        android:layout_alignBottom="@+id/page3textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- "STRING 3: " -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="String 3: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/page3editText"
        android:layout_alignBottom="@+id/page3editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2" />

    <!-- TEXT 1 -->
    <TextView
        android:id="@+id/page3textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/page3header"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp" />

    <!-- BUTTON 1 -->
    <Button
        android:id="@+id/page3button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToActivity1"
        android:text="@string/gostring"
        android:layout_alignBaseline="@+id/page3textView1"
        android:layout_alignBottom="@+id/page3textView1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!-- TEXT 2 -->
    <TextView
        android:id="@+id/page3textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/page3button1"
        android:layout_alignLeft="@+id/page3textView1"
        android:layout_alignStart="@+id/page3textView1" />

    <!-- BUTTON 2 -->
    <Button
        android:id="@+id/page3button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gostring"
        android:onClick="goToActivity2"
        android:layout_alignBaseline="@+id/page3textView2"
        android:layout_alignBottom="@+id/page3textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!-- EDIT 3 -->
    <EditText
        android:id="@+id/page3editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/page3button2"
        android:layout_alignLeft="@+id/page3textView2"
        android:layout_alignStart="@+id/page3textView2">
        <requestFocus />
    </EditText>

    <!-- BUTTON 3 -->
    <Button
        android:id="@+id/page3button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="save3"
        android:text="@string/save"
        android:layout_alignBaseline="@+id/page3editText"
        android:layout_alignBottom="@+id/page3editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
